--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -2,8 +2,10 @@
   "extends": "../../tsconfig.base.json",
   "files": [],
   "include": [],
+  "composite": true,
   "references": [
     {
+      
       "path": "./tsconfig.app.json"
     },
     {
